// Vitest Snapshot v1

exports[`webpack plugin > imports dynamically created routes 1`] = `
"function index() {
  return import(/* webpackChunkName: \\"index\\" */ '@/pages/index.vue')
}
function users_foo() {
  return import(/* webpackChunkName: \\"users-foo\\" */ '@/pages/users/foo.vue')
}
function users__id() {
  return import(/* webpackChunkName: \\"users-id\\" */ '@/pages/users/_id.vue')
}

export default [
  {
    name: 'index',
    path: '/',
    component: index,
  },
  {
    name: 'users-foo',
    path: '/users/foo',
    component: users_foo,
  },
  {
    name: 'users-id',
    path: '/users/:id?',
    component: users__id,
  },
]
"
`;

exports[`webpack plugin > should not stop watching after detecting route custom block syntax errors 1`] = `
"function index() {
  return import(/* webpackChunkName: \\"index\\" */ '@/pages/index.vue')
}
function users_foo() {
  return import(/* webpackChunkName: \\"users-foo\\" */ '@/pages/users/foo.vue')
}
function users__id() {
  return import(/* webpackChunkName: \\"users-id\\" */ '@/pages/users/_id.vue')
}

export default [
  {
    name: 'index',
    path: '/',
    component: index,
  },
  {
    name: 'users-foo',
    path: '/users/foo',
    component: users_foo,
  },
  {
    name: 'users-id',
    path: '/users/:id?',
    component: users__id,
  },
]
"
`;

exports[`webpack plugin > should write to custom output file if specified 1`] = `
"function index() {
  return import(/* webpackChunkName: \\"index\\" */ '@/pages/index.vue')
}
function users_foo() {
  return import(/* webpackChunkName: \\"users-foo\\" */ '@/pages/users/foo.vue')
}
function users__id() {
  return import(/* webpackChunkName: \\"users-id\\" */ '@/pages/users/_id.vue')
}

export default [
  {
    name: 'index',
    path: '/',
    component: index,
  },
  {
    name: 'users-foo',
    path: '/users/foo',
    component: users_foo,
  },
  {
    name: 'users-id',
    path: '/users/:id?',
    component: users__id,
  },
]
"
`;

exports[`webpack plugin > watches adding a page 1`] = `
"function index() {
  return import(/* webpackChunkName: \\"index\\" */ '@/pages/index.vue')
}
function users() {
  return import(/* webpackChunkName: \\"users\\" */ '@/pages/users.vue')
}
function users_foo() {
  return import(/* webpackChunkName: \\"users-foo\\" */ '@/pages/users/foo.vue')
}
function users__id() {
  return import(/* webpackChunkName: \\"users-id\\" */ '@/pages/users/_id.vue')
}

export default [
  {
    name: 'index',
    path: '/',
    component: index,
  },
  {
    name: 'users',
    path: '/users',
    component: users,
    children: [
      {
        name: 'users-foo',
        path: 'foo',
        component: users_foo,
      },
      {
        name: 'users-id',
        path: ':id?',
        component: users__id,
      },
    ],
  },
]
"
`;

exports[`webpack plugin > watches changing route custom block data 1`] = `
"function index() {
  return import(/* webpackChunkName: \\"index\\" */ '@/pages/index.vue')
}
function users_foo() {
  return import(/* webpackChunkName: \\"users-foo\\" */ '@/pages/users/foo.vue')
}
function users__id() {
  return import(/* webpackChunkName: \\"users-id\\" */ '@/pages/users/_id.vue')
}

export default [
  {
    name: 'index',
    path: '/',
    component: index,
  },
  {
    name: 'users-foo',
    path: '/users/foo',
    component: users_foo,
    requiresAuth: true,
  },
  {
    name: 'users-id',
    path: '/users/:id?',
    component: users__id,
  },
]
"
`;

exports[`webpack plugin > watches removing a page 1`] = `
"function index() {
  return import(/* webpackChunkName: \\"index\\" */ '@/pages/index.vue')
}
function users__id() {
  return import(/* webpackChunkName: \\"users-id\\" */ '@/pages/users/_id.vue')
}

export default [
  {
    name: 'index',
    path: '/',
    component: index,
  },
  {
    name: 'users-id',
    path: '/users/:id?',
    component: users__id,
  },
]
"
`;
